plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.beyond'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.kafka:spring-kafka'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'

	// test 관련 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// websocket 의존성
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	
	// STOMP 메시징 지원 (SubscribeMapping 등)
	implementation 'org.springframework:spring-messaging'
	implementation 'org.springframework:spring-websocket'

	//	eureka client 의존성
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	// ObjectMapper 자바 시간타입 변환 가능 의존성
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// msa간에 통신을 위한 openfeign의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// InfluxDB 클라이언트
	implementation 'com.influxdb:influxdb-client-java:6.9.0'
	
	// Apache Commons Pool2 for Redis connection pooling
	implementation 'org.apache.commons:commons-pool2:2.12.0'
	
	// Lettuce for Redis client (Redis Pub/Sub에 필요)
	implementation 'io.lettuce:lettuce-core:6.3.0.RELEASE'
	
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'
	
	// Resilience4j for Circuit Breaker
	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
	
	// Actuator for monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	
	// Spring Security for STOMP authentication
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//	jwt 토큰 관련 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	
	// Guava for RateLimiter
	implementation 'com.google.guava:guava:32.1.3-jre'

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
